--- a/package.json
+++ b/package.json
@@ -17,10 +17,20 @@
     "npm": ">=6"
   },
   "dependencies": {
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-redux": "7.2.0",
+    "@reduxjs/toolkit": "1.5.1",
+    "@types/moment": "2.13.0",
+    "@types/react-redux": "7.1.16",
+    "axios": "^0.21.1",
+    "moment": "2.29.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-loader-spinner": "4.0.0",
+    "react-redux": "7.2.3",
+    "react-router-dom": "5.2.0",
     "redux": "4.0.5",
+    "redux-actions": "2.6.5",
+    "redux-saga": "1.1.3",
+    "typed-redux-saga": "^1.3.1",
     "typescript": "3.8.3"
   },
   "postcss": {
@@ -37,7 +47,8 @@
   "devDependencies": {
     "@types/react": "16.9.34",
     "@types/react-dom": "16.9.6",
-    "@types/react-redux": "7.1.7",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/redux-actions": "^2.6.1",
     "@types/webpack-env": "1.15.1",
     "autoprefixer": "9.3.1",
     "cross-env": "5.2.0",
