--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "1.5.1",
     "@types/moment": "2.13.0",
     "@types/react-redux": "7.1.16",
+    "assets": "3.0.1",
     "axios": "^0.21.1",
     "moment": "2.29.1",
     "react": "17.0.2",
