--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.0",
   "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=development parcel --port 3000 index.html",
+    "start": "parcel index.html",
     "lint": "npm run lint:scripts && npm run lint:declarations",
     "lint:scripts": "tslint './src/**/*.{ts,tsx}' --project tsconfig.json --fix --format stylish",
     "lint:declarations": "tslint --project tsconfig.json --format stylish --fix './typings/**/*'",
@@ -31,7 +31,8 @@
     "redux-actions": "2.6.5",
     "redux-saga": "1.1.3",
     "typed-redux-saga": "^1.3.1",
-    "typescript": "3.8.3"
+    "typescript": "3.8.3",
+    "parcel-bundler": "1.12.4"
   },
   "postcss": {
     "modules": true,
